# CYLibusb

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cyl/libusb/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/api/: DeviceAction.cpp  DeviceAction.h
app/src/main/cpp/usb/: CMakeLists.txt
app/src/main/cpp/wrapper/: BaseDevice.cpp  BaseDevice.h  DeviceManager.cpp  DeviceManager.h  DeviceOperator.cpp  DeviceOperator.h
app/src/main/java/com/cyl/libusb/: LibusbUtils.java  MainActivity.java
app/src/main/java/com/cyl/libusb/usb/: UsbDescriptor.java  UsbDevice.java  UsbManager.java  UsbOperator.java  UsbSpeed.java
app/src/main/java/com/cyl/libusb/usb/api/: DeviceAction.java  DeviceReaderObserver.java  UsbAction.java
app/src/main/java/com/cyl/libusb/usb/device/: UsbDescriptor.java  UsbDevice.java  UsbSpeed.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cyl/libusb/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
